[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Archer1.gd" type="Script" id=1]
[ext_resource path="res://Sprites/mobs/Archer Skeleton  Animations/Attack/Separate sp/attack (10).png" type="Texture" id=2]
[ext_resource path="res://Animation/Mobs/Archer_Attack.tres" type="Animation" id=3]
[ext_resource path="res://Animation/Mobs/Archer_Death.tres" type="Animation" id=4]
[ext_resource path="res://Animation/Mobs/Archer_Idle.tres" type="Animation" id=5]
[ext_resource path="res://Animation/Mobs/Archer_Walk.tres" type="Animation" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 121.184, 242.979 )

[node name="Archer" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 15.8228, -11.3083 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="anim" type="AnimationPlayer" parent="Sprite"]
autoplay = "Idle"
anims/Attack = ExtResource( 3 )
anims/Death = ExtResource( 4 )
anims/Idle = ExtResource( 5 )
anims/Walk = ExtResource( 6 )

[node name="Position2D" type="Position2D" parent="Sprite"]
position = Vector2( -24.6835, -77.7758 )

[node name="DetectFloorLeft" type="RayCast2D" parent="."]
position = Vector2( -75, 120 )
scale = Vector2( 3, 2.5 )
enabled = true
cast_to = Vector2( 0, 60 )

[node name="DetectFloorRight" type="RayCast2D" parent="."]
position = Vector2( 150, 120 )
scale = Vector2( 3, 2.5 )
enabled = true
cast_to = Vector2( 0, 60 )

[node name="DetectWallLeft" type="RayCast2D" parent="."]
position = Vector2( 0, 150 )
rotation = 1.5708
scale = Vector2( 3, 2 )
enabled = true
cast_to = Vector2( 0, 60 )

[node name="DetectWallRight" type="RayCast2D" parent="."]
position = Vector2( 50, 150 )
rotation = 4.71239
scale = Vector2( 3, 2 )
enabled = true
cast_to = Vector2( 0, 60 )

[node name="Enabler" type="VisibilityEnabler2D" parent="."]
visible = false
scale = Vector2( 250, 250 )

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2( -108, -73 )
